# haoge-accounting

./: .gitignore  CLAUDE.md  README.md  electron.vite.config.ts  package-lock.json  package.json  test-main.js  test-package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
scripts/: fix-electron-require.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs
src/main/: database.ts  index.ts  ipc-handlers.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.css  App.tsx  api.ts  env.d.ts  main.tsx
src/renderer/src/pages/: AddExpense.tsx  CategoryManage.tsx  ExpenseList.tsx  MonthlyStats.tsx  SokobanGame.tsx
